# MicroSlither.io

./: .gitignore  README.md
snake-game-contract/: Cargo.toml
snake-game-contract/src/: contract.rs  lib.rs  service.rs  state.rs
