[package]
name = "snake-game"
version = "0.1.0"
edition = "2021"

[dependencies]
linera-sdk = "0.15.0"
async-graphql = { version = "7.0.17", default-features = false }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.75"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "snake_game_contract"
path = "src/contract.rs"

[[bin]]
name = "snake_game_service"
path = "src/service.rs"